add_definitions(-DSOKOL_METAL)
set(slang "metal_macos")

fips_begin_app(rygar windowed)
  include_directories(roms)
  add_subdirectory(roms)
  sokol_shader(shaders.glsl ${slang})
  fips_frameworks_osx(Cocoa QuartzCore Metal MetalKit AudioToolbox)
  fips_files(sokol.m rygar.c)
  fips_deps(roms)
fips_end_app()
