if(FIPS_EMSCRIPTEN)
  add_definitions(-DSOKOL_GLES2)
  set(slang "glsl100")
elseif(FIPS_OSX)
  add_definitions(-DSOKOL_METAL)
  set(slang "metal_macos")
else()
  add_definitions(-DSOKOL_GLCORE33)
  set(slang "glsl330")
endif()

fips_begin_app(rygar windowed)
  include_directories(roms)
  add_subdirectory(roms)
  sokol_shader(shaders.glsl ${slang})
  if (FIPS_OSX)
    fips_files(sokol.m)
    fips_frameworks_osx(Cocoa QuartzCore Metal MetalKit AudioToolbox)
  else()
    fips_files(sokol.c)
    fips_libs(X11 GL m dl asound)
  endif()
  fips_files(rygar.c)
  fips_deps(roms)
fips_end_app()
